--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
         <div id="title">
           <h1>Mangoliu.github.io</h1>
           <p>MangoLiu's Bolg</p>
+
+           <span class="credits left">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>
+
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h1>
-<a name="mangoliugithubio" class="anchor" href="#mangoliugithubio"><span class="octicon octicon-link"></span></a>mangoliu.github.io</h1>
+<a name="mangoliugithubio" class="anchor" href="#mangoliugithubio"><span class="octicon octicon-link"></span></a><!-- mangoliu.github.io --></h1>
 
-<p>MangoLiu</p>
+<!-- <p>MangoLiu</p> -->
       </section>
 
     </div>
