--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
           <h1>Mangoliu.github.io</h1>
           <p>MangoLiu's Bolg</p>
 
-
-         <h2>
-           <span class="credits left">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>
+       <!--   添加内容 -->
+           <span class="credits left" size="13">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>
           <br>
-         </h2>
+
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
