--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>MangoLiu's Bolg</p>
 
        <!--   添加内容 -->
-           <span class="credits left" size="13">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>
+           <span class="credits left" ><h1>1: </h1><a href="https://github.com/MangoLiu">About MangoLiu</a></span>
           <br>
 
           <hr>
