--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           <p>MangoLiu's Bolg</p>
 
        <!--   添加内容 -->
-           <span class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>
+          <!-- <span class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>-->
+          <p size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></p>
           <br>
 
           <hr>
