--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mangoliu.github.io by MangoLiu</title>
+    <title>Mangoliu's Blogs</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -33,7 +33,7 @@
 
        <!--   添加内容 -->
           <!-- <span class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>-->
-          <p size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></p>
+          <p class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></p>
           <br>
 
           <hr>
