--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
        <!--   添加内容 -->
           <!-- <span class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>-->
-          <p class="credits left" size="35">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></p>
+          <p  size="35">1: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">Rework读书笔记</a></p>
           <br>
 
           <hr>
