--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html itemscope="" itemtype="https://github.com/MangoLiu/mangoliu.github.io">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta content="/images/Mangoliu.png" itemprop="image">
+    <meta content="https://github.com/MangoLiu/mangoliu.github.io/images/Mangoliu.png" itemprop="image">
     <title>Mangoliu's Blogs</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
