--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta content="https://github.com/MangoLiu/mangoliu.github.io/images/Mangoliu.png" itemprop="image">
+    <!--<meta content="https://github.com/MangoLiu/mangoliu.github.io/images/Mangoliu.png" itemprop="image">-->
     <title>Mangoliu's Blogs</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="shortcut icon" type="image/ico" href="/images/Mangoliu.png"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
