--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mangoliu's Blogs</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="shortcut icon" type="image/ico" href="/images/Mangoliu.png"> 
+    <link rel="shortcut icon" type="image/ico" href="images/Mangoliu.png"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
