--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
 
           <!--   添加内容 -->
           <!-- <span class="credits left" size="22">1: <a href="https://github.com/MangoLiu">About MangoLiu</a></span>-->
-          <p  size="35">1: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">Rework读书笔记</a></p>
-          <p  size="35">2: <a href=" https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习-决策树</a></p>
+          <!--<p>1: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">Rework读书笔记</a></p>
+		  <br>
+          <p>2: <a href=" https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习-决策树</a></p>
           <br>
+		  -->
+		  <span class="credits left">1 <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">Rework读书笔记</a></span>
+		  <span class="credits left">2 <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习-决策树</a></span>
 
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
+          <!--<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>-->
         </div>
 
         <h1>
