--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	  
          <span>2: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习-决策树</a></span>
          <br>
+         
+         <span>3: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习-数据</a></span>
+	     <br>
           <hr>
           <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
           <!--<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>-->
