--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
          
          <span>3: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习-数据</a></span>
 	     <br>
+	     
+         <span>4: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E9%A9%AC%E5%B0%94%E7%A7%91%E5%A4%AB%E9%93%BE%E6%A8%A1%E5%9E%8B.md">机器学习-马尔科夫模型</a></span>
+         <br>
           <hr>
           <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
           <!--<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>-->
