--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>MangoLiu's Blogs</h1>
+          <h1>心有猛虎，细嗅蔷薇</h1>
           <!--<p>MangoLiu's Bolg</p>-->
 
           <!--   添加内容 -->
