--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <!--   添加内容 -->
           <br>
           <h3>
-         <span>1: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">Rework读书笔记</a></span>
+         <span>1: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">读书笔记---《Rework》</a></span>
 	     <br>	
 	  
-         <span>2: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习-决策树</a></span>
+         <span>2: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习---决策树</a></span>
          <br>
          
-         <span>3: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习-数据</a></span>
+         <span>3: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习---数据</a></span>
 	     <br>
 	     
          <span>4: <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E9%A9%AC%E5%B0%94%E7%A7%91%E5%A4%AB%E9%93%BE%E6%A8%A1%E5%9E%8B.md">机器学习-马尔科夫模型</a></span>
