--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
          <br>
       
           <hr>
-          <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu">MangoLiu</a></span>
+          <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E5%85%B3%E4%BA%8E%E6%88%91.md">MangoLiu</a></span>
           <!--<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>-->
         </div>
 
