--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
           <!--   添加内容 -->
           <br>
           <h3>
-         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">读书笔记---《Rework》</a></span>
-       <br> 
+       
     
          <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E5%86%B3%E7%AD%96%E6%A0%91.md">机器学习---决策树</a></span>
          <br>
@@ -85,7 +84,10 @@
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E9%9F%B3%E9%A2%91%E5%B9%BF%E5%91%8A%E6%8E%A8%E9%80%81%E6%A8%A1%E5%9E%8B---FAQ.md">音频广告推送模型---FAQ </a></span>
         <br>
 
-        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E9%9F%B3%E9%A2%91%E5%B9%BF%E5%91%8A%E6%8E%A8%E9%80%81%E7%AE%97%E6%B3%95---%E5%90%8E%E7%BB%AD%E5%BE%85%E4%BC%98%E5%8C%96%E7%82%B9list.md">音频广告推送算法---后续待优化点 </a></span>
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E9%9F%B3%E9%A2%91%E5%B9%BF%E5%91%8A%E6%8E%A8%E9%80%81%E7%AE%97%E6%B3%95---%E5%90%8E%E7%BB%AD%E5%BE%85%E4%BC%98%E5%8C%96%E7%82%B9list.md">音频广告推送算法---后续待优化点 </a></span><br>
+
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">读书笔记---《Rework》</a></span>
+       <br> 
 
        <!--
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E5%85%B3%E4%BA%8E%E6%88%91.md">关于我 </a></span>
