耐心是美德
耐心是美德

--- a/index.html
+++ b/index.html
@@ -89,21 +89,23 @@
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Rework%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.md">读书笔记---《Rework》</a></span>
        <br> 
 
-       <!--
-        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E5%85%B3%E4%BA%8E%E6%88%91.md">关于我 </a></span>
-        <br>
--->
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E7%AE%97%E6%B3%95---%E5%B8%B8%E8%A7%81%E5%B0%8F%E7%AE%97%E6%B3%951.md">算法---常见小算法1</a></span>
+       <br> 
+
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E7%AE%97%E6%B3%95---%E5%B8%B8%E8%A7%81%E5%B0%8F%E7%AE%97%E6%B3%952.md">算法---常见小算法2</a></span>
+       <br> 
+
         </h3>
          
          <br>
       
           <hr>
           <span class="credits left">Blogs maintained by <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E5%85%B3%E4%BA%8E%E6%88%91.md">MangoLiu</a></span>
-          <!--<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>-->
+   
         </div>
 
         <h1>
-<a name="mangoliugithubio" class="anchor" href="#mangoliugithubio"><span class="octicon octicon-link"></span></a><!-- mangoliu.github.io --></h1>
+<a name="mangoliugithubio" class="anchor" href="#mangoliugithubio"><span class="octicon octicon-link"></span></a></h1>
 
 <!-- <p>MangoLiu</p> -->
       </section>
