--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
          
 		<span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92.md">机器学习---线性回归</a></span>
         <br>
+		
+		<span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C.md">机器学习---神经网络</a></span>
+        <br>
         
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E9%A9%AC%E5%B0%94%E7%A7%91%E5%A4%AB%E9%93%BE%E6%A8%A1%E5%9E%8B.md">机器学习---马尔科夫模型</a></span>
          <br>
