--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E9%A9%AC%E5%B0%94%E7%A7%91%E5%A4%AB%E9%93%BE%E6%A8%A1%E5%9E%8B.md">机器学习---马尔科夫模型</a></span>
          <br>
 
-        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_K-%E8%BF%91%E9%82%BB%E7%AE%97%E6%B3%95.md">机器学习---K-近邻算法</a></span>
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0---RankNet.md">机器学习---K-近邻算法</a></span>
          <br>
 
-         
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_K-%E8%BF%91%E9%82%BB%E7%AE%97%E6%B3%95.md">机器学习---RankNet</a></span>
+         <br>
 
        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90---%E6%9D%82%E8%B0%88.md">数据分析---杂谈</a></span>
        <br>
