--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           <br>
           <h3>
        
+	   <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/paper---A%20Dynamic%20Bayesian%20Network%20Click%20Model.md"> Paper---动态贝叶斯网络点击模型</a></span>
+        <br>
+		
+		
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习---数据</a></span>
         <br>
 		
