--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
       <section>
         <div id="title">
-          <h1>心有猛虎，细嗅蔷薇</h1>
+          <!--<h1>心有猛虎，细嗅蔷薇</h1>-->
+		  <h1>Move fast and Break things</h1>
           <!--<p>MangoLiu's Bolg</p>-->
 
-          <!--   添加内容 -->
           <br>
           <h3>
        
 	   <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/paper---A%20Dynamic%20Bayesian%20Network%20Click%20Model.md"> Paper---动态贝叶斯网络点击模型</a></span>
         <br>
 		
-        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Book---Learning%20to%20Rank%20for%20Information%20Retrieval%20(1).md"> Book---Learning to Rank for Information Retrieval (1)-Overview of Learning to Rank </a></span>
+        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Book---Learning%20to%20Rank%20for%20Information%20Retrieval%20(1).md"> Book---Learning to Rank for Information Retrieval (一) </a></span>
         <br>
 		
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_%E6%95%B0%E6%8D%AE.md">机器学习---数据</a></span>
