--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 	   <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/paper---A%20Dynamic%20Bayesian%20Network%20Click%20Model.md"> Paper---A Dynamic Bayesian Network Click Model </a></span>
         <br>
 		
+		<span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/paper---Learning%20to%20order%20things.md"> Paper---Learning to order things </a></span>
+        <br>
+		
+		
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/Book---Learning%20to%20Rank%20for%20Information%20Retrieval%20(1).md"> Book---Learning to Rank for Information Retrieval (一) </a></span>
         <br>
 		
