--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
         <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0_K-%E8%BF%91%E9%82%BB%E7%AE%97%E6%B3%95.md">机器学习---K-近邻算法</a></span>
          <br>
-
+		 
+		<span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/some%20blogs.md">Some Blogs </a></span>
+       <br>
        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%95%B0%E6%8D%AE%E5%88%86%E6%9E%90---%E6%9D%82%E8%B0%88.md">数据分析---杂谈</a></span>
        <br>
        <span> <a href="https://github.com/MangoLiu/mangoliu.github.io/blob/master/%E6%95%B0%E6%8D%AE%E5%BA%93---%E4%BB%96%E5%B1%B1%E4%B9%8B%E7%8E%89.md">数据库---他山之玉</a></span>
